src/test/deca/context/invalid/provided/invalide_20_Modulo.deca
// Description : un teste invalid , calcule du modulo
// Sortie:
// ERROR : L'opérand à gauche doit étre de type Int et pas de type float.

{
    float x = 10;
    int y = x%10;
}